# mc-rs

./: .gitignore  Cargo.toml
src/: beh.rs  lib.rs  pack.rs  res.rs
test/behavior_pack/: manifest.json
test/resource_pack/: manifest.json
