[package]
name = "mc-rs"
version = "0.1.0"
authors = ["CAIMEOX <1853884864@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identicon-rs = "^1.4.1"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }